chore: init repo, add .gitignore, XGBoost grid UI+cap, backend param cap

--- a/.gitignore
+++ b/.gitignore
@@ -1,59 +1,39 @@
-# OS / editor
+# OS & editor
 .DS_Store
 Thumbs.db
-desktop.ini
 .idea/
 .vscode/
-*.swp
-*.swo
-
-# Logs
 *.log
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-.pnpm-debug.log*
 
-# Env and secrets
-.env
-*.env
-*.env.*
-backend/.env
+# Node/React
+node_modules/
+frontend/node_modules/
+frontend/build/
 frontend/.env
 
 # Python
 __pycache__/
 *.py[cod]
-*.pyo
-.Python
 .pytest_cache/
 .mypy_cache/
 .coverage
-coverage.xml
-htmlcov/
+coverage/
+
+# Virtual envs
 .venv/
 venv/
-env/
-ENV/
-pip-wheel-metadata/
-*.egg-info/
-*.egg
-build/
+backend/.venv/
+backend/venv/
+
+# Local env and secrets
+.env
+backend/.env
+
+# Generated data & artifacts
+backend/uploads/**
+!backend/uploads/.gitkeep
+
+# Dist/build
 dist/
-
-# Project data/uploads (do not commit user files or cache)
-backend/uploads/
-
-# Node / React
-frontend/node_modules/
-frontend/.pnp
-frontend/.pnp.js
-frontend/build/
-frontend/dist/
-frontend/.next/
-frontend/.vercel/
-
-# Misc caches
-.cache/
-**/.cache/
+build/
 
